# codehub

./: .gitignore  BACKEND_PLAN.md  CLAUDE.md  COMPLETION_PLAN.md  Makefile  README.md  TEST_SCENARIOS.md  UI_SCENARIOS.md  biome.json  components.json  index.html  package-lock.json  package.json  spike.html  tsconfig.json  vite.config.ts
.claude/rules/: frontend.md  testing.md
.claude/skills/add-cli/: SKILL.md
.claude/skills/lint-fix/: SKILL.md
.claude/skills/release-cut/: SKILL.md
.claude/skills/runtime-rebuild/: SKILL.md
.github/workflows/: ci.yml  release.yml
design/: .design-canvas.state.json  .thumbnail  README.md  components.jsx  design-canvas.jsx  index.html  store.jsx  styles.css
design/handoff/: CLAUDE.md  COMPONENTS.md  CURRENT_SCREEN_AUDIT.md  MIGRATION.md  SCREENS.md
design/project/: .design-canvas.state.json  .thumbnail  components.jsx  index.html  styles.css
design/project/handoff/: CLAUDE.md  COMPONENTS.md  MIGRATION.md  SCREENS.md
design/project/screens/: _term.jsx  about.jsx  agent-settings.jsx  broadcast.jsx  command-palette.jsx  companion.jsx  container-inspector.jsx  dashboard.jsx  empty-state.jsx  integrations.jsx  live-activities.jsx  main-hub-a.jsx  main-hub-b.jsx  platform.jsx  resume.jsx  session-detail.jsx  settings.jsx  shortcuts.jsx  spawn-dialog.jsx  states.jsx  usage.jsx  workspace.jsx
design/screens/: _term.jsx  about.jsx  agent-settings.jsx  command-palette.jsx  companion.jsx  container-inspector.jsx  dashboard.jsx  empty-state.jsx  hub-states.jsx  integrations.jsx  live-activities.jsx  main-hub-a.jsx  new-workspace.jsx  platform.jsx  resume.jsx  session-detail.jsx  settings.jsx  shortcuts.jsx  spawn-dialog.jsx  states.jsx  usage.jsx  welcome.jsx  workspace.jsx
runtime/: Dockerfile  README.md  tmux.conf
src/: main.ts  style.css  terminal.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/devserver/: Cargo.toml
src-tauri/devserver/src/: main.rs
src-tauri/icons/: icon.icns
src-tauri/island-helper/: Cargo.toml
src-tauri/island-helper/src/: main.rs
src-tauri/src/: activity.rs  auth.rs  config.rs  devserver.rs  docker.rs  events.rs  island.rs  lib.rs  lifecycle.rs  main.rs  manager.rs  pty.rs  pty_output.rs  types.rs  vault.rs
src/app/: App.tsx  fonts.css  main.tsx  panes.css  theme.css  tokens.css
src/app/components/: AboutDialog.tsx  ApiKeyDialog.tsx  Grid.tsx  Island.tsx  LaunchPanel.tsx  LauncherBody.tsx  LauncherDialog.tsx  LoginTerminalDialog.tsx  Masthead.tsx  NewTabPopover.tsx  PaneFoot.tsx  PaneHead.tsx  PaneMount.tsx  Rail.tsx  SpawnModal.tsx  SpawnPane.tsx  TabBar.tsx  spawn-form.tsx
src/app/components/chrome/: AppShell.tsx  Sidebar.tsx  SidebarRail.tsx  WorkspaceTab.tsx
src/app/components/hub/: ActionBar.tsx  ActivityRail.tsx  BroadcastModal.tsx  BusyOverlay.tsx  CloneBanner.tsx  ComingSoon.tsx  CommandPalette.tsx  CompareGrid.tsx  DetailsPanel.tsx  DiffBody.tsx  DiffViewer.tsx  DockerRuntimeBanner.tsx  FilePreview.tsx  FilesBrowser.tsx  GroupsBar.tsx  HubBanner.tsx  HubSidebar.tsx  HubStatusBar.tsx  HubTabs.tsx  PaneContextMenu.tsx  ResizeHandle.tsx  RuntimeBanner.tsx  ShellPanel.tsx  Shortcuts.tsx  SourceControl.tsx  WorkspaceBar.tsx  git-graph.ts
src/app/components/primitives/: AccountAvatar.tsx  AgentGlyph.tsx  Character.tsx  ColorDot.tsx  CompanionAvatar.tsx  ContextGauge.tsx  FileGlyph.tsx  IconBtn.tsx  KV.tsx  Logo.tsx  MascotGif.tsx  MetricStat.tsx  PaneAddBtn.tsx  PaneTypeChip.tsx  RobotMascot.tsx  SearchInput.tsx  Segmented.tsx  Spark.tsx  SpawnSplitBtn.tsx  StatusBadge.tsx  StatusDot.tsx  TabBar.tsx  Tag.tsx  TermBlock.tsx  Tip.tsx  icons.tsx  index.ts
src/app/components/ui/: dialog.tsx  popover.tsx
src/app/dev/: DevPreview.tsx  IslandPreview.tsx  PrimitivesGallery.tsx
src/app/hooks/: useActivityPoll.ts  useAgentEvents.ts  useBurnRate.ts  useContainerStatsPoll.ts  useGitStatusPoll.ts  useKeyboard.ts  useResizableDock.ts  useSessionUsage.ts  useSlideIn.ts
src/app/lib/: accounts.ts  activity.ts  block-glyph-overlay.ts  bridge.ts  catalog.ts  fileIcon.ts  format.ts  fs.ts  highlight.ts  ipc.ts  launcher.ts  metrics.ts  mock.ts  overlay.ts  panes.ts  pty-output.ts  store.ts  theme.ts  tree.ts
src/app/screens/: AgentDetail.tsx  Companion.tsx  ContainerInspector.tsx  Dashboard.tsx  EmptyState.tsx  Integrations.tsx  Island.tsx  LiveActivities.tsx  NewWorkspace.tsx  Resume.tsx  SessionDetail.tsx  Settings.tsx  SpawnDialog.tsx  States.tsx  Usage.tsx  Welcome.tsx  Workspace.tsx
src/app/ui/: avatar.tsx  badge.tsx  button.tsx  card.tsx  checkbox.tsx  command.tsx  dialog.tsx  dropdown-menu.tsx  input.tsx  label.tsx  popover.tsx  progress.tsx  scroll-area.tsx  select.tsx  separator.tsx  sheet.tsx  slider.tsx  switch.tsx  tabs.tsx  textarea.tsx  toggle-group.tsx  toggle.tsx  tooltip.tsx
src/spike/: PaneMount.tsx  Spike.tsx  main.tsx  paneRegistry.ts
