# The app is the workspace ROOT package and must have exactly one binary:
# Tauri's bundler enumerates every bin target (and every file under `src/bin/`)
# of the package being built, ignoring `required-features`, so any extra bin in
# this package breaks `tauri build`. The dev bridge therefore lives in its own
# member crate (`devserver/`), which `tauri build` never compiles or bundles.
[workspace]
members = ["devserver"]
resolver = "2"

[package]
name = "codehub"
version = "0.1.2"
edition = "2021"

[lib]
name = "codehub_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
# Native OS folder picker for the Tier-2 workspace/repo chooser (pick_directory).
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }
futures-util = "0.3"
bollard = "0.17"
bytes = "1"
thiserror = "1"
uuid = { version = "1", features = ["v4"] }
once_cell = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Dev bridge only — optional, pulled in by the `devserver` feature.
axum = { version = "0.7", features = ["ws"], optional = true }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
# Compiles the standalone HTTP/WS bridge bin for browser-based UI testing.
devserver = ["dep:axum"]

# Native macOS Dynamic Island companion (src/island.rs). objc2 is already in the
# tree transitively via Tauri; these pin matching versions for direct AppKit use
# so cargo unifies to a single copy of each crate.
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = "0.3"
objc2-foundation = "0.3"
# CALayer feature enables the layer setters (corner radius / masking) used to
# round the island; the crate itself is already pulled in transitively.
objc2-quartz-core = { version = "0.3", features = ["CALayer"] }
